# GS-MEM

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  NOTICE  README.md  SECURITY.md  cliff.toml
.github/workflows/: ci.yml
crates/gs-mem-core/: Cargo.toml
crates/gs-mem-core/src/: config.rs  context.rs  error.rs  fingerprint.rs  lib.rs  sync.rs  tools.rs  types.rs
crates/gs-mem-core/src/chunker/: dialect.rs  mod.rs  simhash.rs  structural.rs
crates/gs-mem-core/src/embedding/: mod.rs  sovereign.rs
crates/gs-mem-core/src/graph/: bitemporal.rs  link_detector.rs  mod.rs  triples.rs
crates/gs-mem-core/src/indexer/: memo.rs  mod.rs  source_version.rs
crates/gs-mem-core/src/mcp/: mod.rs  tools.rs
crates/gs-mem-core/src/search/: backlink_hop.rs  hnsw.rs  intent.rs  mod.rs  query_sanitizer.rs  rrf.rs  strategy.rs  tantivy_index.rs  vector_index.rs
crates/gs-mem-core/src/storage/: mod.rs  schema.rs  sqlite.rs
crates/gs-mem-core/tests/: enterprise_doctrine.rs  hnsw_proptest.rs  non_exhaustive_pin.rs  tools_dispatch.rs
crates/gs-mem-mcp/: Cargo.toml
crates/gs-mem-mcp/src/: main.rs
crates/gs-mem-server/: Cargo.toml
crates/gs-mem-server/src/: lib.rs  main.rs
crates/gs-mem-server/tests/: api.rs
crates/immortal-nn/: Cargo.toml
crates/immortal-nn/proptest-regressions/: ops.txt
crates/immortal-nn/src/: blocks.rs  causal_lm.rs  deberta.rs  format.rs  heads.rs  lib.rs  ops.rs  tensor.rs  xlm_roberta.rs
crates/immortal-nn/src/conv/: batch_norm.rs  conv2d.rs  mod.rs  pooling.rs
crates/immortal-nn/src/rnn/: gru.rs  lstm.rs  mod.rs  util.rs  vanilla.rs
crates/immortal-nn/src/transformer/: attention.rs  decoder_block.rs  feed_forward.rs  mask.rs  mod.rs  positional_encoding.rs
crates/immortal-nn/tests/: enterprise_doctrine.rs  xlm_roberta_contract.rs
crates/immortal-nn/tests/conv/: conv2d_correctness.rs  conv_proptests.rs
crates/immortal-nn/tests/rnn/: rnn_correctness.rs  rnn_proptests.rs
crates/immortal-nn/tests/transformer/: transformer_correctness.rs  transformer_proptests.rs
crates/immortal-tokenizer/: Cargo.toml
crates/immortal-tokenizer/benches/: encode.rs
crates/immortal-tokenizer/src/: error.rs  format.rs  lib.rs  normalizer.rs  pretokenizer.rs  tokenizer.rs  truncation.rs  wordpiece.rs
crates/immortal-tokenizer/tests/: golden_wordpiece.rs
crates/immortal-tokenizer/tests/fixtures/: CHECKSUMS.txt  golden_wordpiece.jsonl  minilm-l6-v2.sovereign-tokenizer
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
models/sovereign/: minilm-l6-v2.sovereign
