[workspace]
resolver = "2"
members = [
    "crates/gs-mem-core",
    "crates/gs-mem-mcp",
    "crates/immortal-nn",
    "crates/immortal-tokenizer",
    "crates/gs-mem-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Galo Serrano Abad <hello@serragi.com>", "NANTAR AI ROBOTICS"]
license = "AGPL-3.0-only"
rust-version = "1.75"
repository = "https://github.com/GaloSerranoA/GS-MEM"
homepage = "https://github.com/GaloSerranoA/GS-MEM"

[workspace.dependencies]
# --- vendored sovereign crates (formerly NANTAR siblings) ---
immortal-nn = { path = "crates/immortal-nn" }
immortal-tokenizer = { path = "crates/immortal-tokenizer", default-features = false }

# --- gs-mem-core ---
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
blake2 = "0.10"
sha2 = "0.10"
dirs = "5"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tantivy = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
once_cell = "1"
walkdir = "2"
rand = "0.8"

# --- immortal-tokenizer deps ---
bincode = { version = "2", features = ["serde"] }
unicode-normalization = "0.1"
unicode_categories = "0.1"
tracing = "0.1"

# --- gs-mem-server (M3) ---
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
mime_guess = "2"

# --- dev / test ---
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
